--- a/templates/show_room.html
+++ b/templates/show_room.html
@@ -45,7 +45,8 @@
     <!--блок формы для вводы выбора-->
     <div class="ans_form">
       <form action="/game" method="POST">
-      <input type="text" name="action" placeholder="Введите действие...">
+      <input type="text" name="action" placeholder="Введите действие..."
+      required="required">
       <button type="submit"></button>
       </form>
     <!--конец блока формы для ответов-->
