updated db_func and app tests, need to do login and logout funcs

--- a/templates/login.html
+++ b/templates/login.html
@@ -34,7 +34,7 @@
     height: 42px;
   }
 </style>
-<h1>Create Your Unique Nickname</h1>
+<h1> Create Your Unique Nickname </h1>
 
 <div class="login_form">
     <form action="/login" method="post">
@@ -47,6 +47,8 @@
     <button type="submit"></button>
     </form>
 </div>
-<p><a href="/game" id="to_game">Play Game Without LogIn</a></p>
+<p>
+  <a href="/game" id="to_game">Play Game Without LogIn</a>
+</p>
 
 {% endblock %}
