working out flask-flashes

--- a/templates/login.html
+++ b/templates/login.html
@@ -1,6 +1,20 @@
 {% extends "layout.html" %}
 
 {% block content %}
+    <!--присваиваем переменной все флеш-сообщения-->
+    {% with messages = get_flashed_messages() %}
+        <!--если флеш-сообщения есть-->
+        {% if messages %}
+            <!--то для каждого отдельного сообщения-->
+            {% for msg in messages %}
+                <!--высвечиваем его текст в отдельном абзаце-->
+                <p>{{msg}}</p>
+            <!--конец цикла вывода отдельных сообщений-->
+            {% endfor %}
+        <!--конец ветвления при наличии сообщений-->
+        {% endif %}
+    <!--конец цикла вывода флеш-сообщений-->
+    {% endwith %}
 <style media="screen">
   #user_input, #pas_input {
     border: none;
