--- a/templates/show_room.html
+++ b/templates/show_room.html
@@ -4,6 +4,21 @@
 <!--начало содержимого. метка для вставки в шаблон-->
 {% block content %}
 
+<!--присваиваем переменной все флеш-сообщения-->
+{% with messages = get_flashed_messages() %}
+    <!--если флеш-сообщения есть-->
+    {% if messages %}
+        <!--то для каждого отдельного сообщения-->
+        {% for msg in messages %}
+            <!--высвечиваем его текст в отдельном абзаце-->
+            <p>{{msg}}</p>
+        <!--конец цикла вывода отдельных сообщений-->
+        {% endfor %}
+    <!--конец ветвления при наличии сообщений-->
+    {% endif %}
+<!--конец цикла вывода флеш-сообщений-->
+{% endwith %}
+
 <!--заголовок страницы - название комнаты-->
 <h1> {{ room.name }} </h1>
 
